# crc32

src/: .gitignore  CMakeLists.txt  Makefile  bench.cc  benchmark.c  cal_crc32c.c  crc.c  crc_1024.c  crc_1024.h  crc_parallel.c  crc_parallel.h  crc_s1024.c  crc_s1024.h  crc_s1024_p4_.c  crc_s1024_p4_.h  crc_s2048.c  crc_s2048.h  generate_table.c  test.c  test.c.bak  test2.c
